--- a/app/src/main/res/layout/activity_bem_vindo.xml
+++ b/app/src/main/res/layout/activity_bem_vindo.xml
@@ -17,6 +17,15 @@
     <ListView
         android:id="@+id/listViewProdutos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="auto"
+        android:onClick="abrirFormulario"
+        android:text="Registrar produto"
+        android:visibility="visible" />
 
 </LinearLayout>
